versions/v2.14/modules/en/pages/observability/monitoring-and-dashboards/configuration/configuration.adoc
= Monitoring Configuration Guides
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2025-08-05
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/monitoring-v2-configuration-guides/index.adoc 
:product-path: observability/monitoring-and-dashboards/configuration/configuration.adoc
ifeval::["{build-type}" != "community"]
:xref-receivers: xref:observability/monitoring-and-dashboards/configuration/receivers.adoc
:xref-configure-alertmanager: xref:observability/monitoring-and-dashboards/configuration/advanced/alertmanager.adoc
:xref-prometheus: xref:observability/monitoring-and-dashboards/configuration/advanced/prometheus.adoc
:xref-servicemonitors-and-podmonitors: xref:observability/monitoring-and-dashboards/configuration/servicemonitors-and-podmonitors.adoc
:xref-monitoring-routes: xref:observability/monitoring-and-dashboards/configuration/routes.adoc
:xref-helm-chart-options: xref:observability/monitoring-and-dashboards/configuration/helm-chart-options.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-receivers: xref:reference-guides/monitoring-v2-configuration/receivers.adoc
:xref-configure-alertmanager: xref:how-to-guides/advanced-user-guides/monitoring-v2-configuration-guides/advanced-configuration/alertmanager.adoc
:xref-prometheus: xref:how-to-guides/advanced-user-guides/monitoring-v2-configuration-guides/advanced-configuration/prometheus.adoc
:xref-servicemonitors-and-podmonitors: xref:reference-guides/monitoring-v2-configuration/servicemonitors-and-podmonitors.adoc
:xref-monitoring-routes: xref:reference-guides/monitoring-v2-configuration/routes.adoc
:xref-helm-chart-options: xref:reference-guides/monitoring-v2-configuration/helm-chart-options.adoc
endif::[]

This page captures some of the most important options for configuring Monitoring V2 in the Rancher UI.

For information on configuring custom scrape targets and rules for Prometheus, please refer to the upstream documentation for the https://github.com/prometheus-operator/prometheus-operator[Prometheus Operator.] Some of the most important custom resources are explained in the Prometheus Operator https://github.com/prometheus-operator/prometheus-operator/blob/main/Documentation/getting-started/design.md[design documentation.] The Prometheus Operator documentation can help also you set up RBAC, Thanos, or custom configuration.

[#_setting_resource_limits_and_requests]
== Setting Resource Limits and Requests

The resource requests and limits for the monitoring application can be configured when installing `rancher-monitoring`. For more information about the default limits, see {xref-helm-chart-options}#_configuring_resource_limits_and_requests[this page.]

[TIP]
====

On an idle cluster, Monitoring may have high CPU usage. To improve performance, turn off the Prometheus adapter.
====


[#_prometheus_configuration]
== Prometheus Configuration

It is usually not necessary to directly edit the Prometheus custom resource.

Instead, to configure Prometheus to scrape custom metrics, you will only need to create a new ServiceMonitor or PodMonitor to configure Prometheus to scrape additional metrics.

[#_servicemonitor_and_podmonitor_configuration]
=== ServiceMonitor and PodMonitor Configuration

For details, see {xref-servicemonitors-and-podmonitors}[this page.]

[#_advanced_prometheus_configuration]
=== Advanced Prometheus Configuration

For more information about directly editing the Prometheus custom resource, which may be helpful in advanced use cases, see {xref-prometheus}[this page.]

[#_alertmanager_configuration]
== Alertmanager Configuration

The Alertmanager custom resource usually doesn't need to be edited directly. For most common use cases, you can manage alerts by updating Routes and Receivers.

Routes and receivers are part of the configuration of the alertmanager custom resource. In the Rancher UI, Routes and Receivers are not true custom resources, but pseudo-custom resources that the Prometheus Operator uses to synchronize your configuration with the Alertmanager custom resource. When routes and receivers are updated, the monitoring application will automatically update Alertmanager to reflect those changes.

For some advanced use cases, you may want to configure alertmanager directly. For more information, refer to {xref-configure-alertmanager}[this page.]

[#_receivers]
=== Receivers

Receivers are used to set up notifications. For details on how to configure receivers, see {xref-receivers}[this page.]

[#_routes]
=== Routes

Routes filter notifications before they reach receivers. Each route needs to refer to a receiver that has already been configured. For details on how to configure routes, see {xref-monitoring-routes}[this page.]

[#_advanced]
=== Advanced

For more information about directly editing the Alertmanager custom resource, which may be helpful in advanced use cases, see {xref-configure-alertmanager}[this page.]
